# GUARD-RAG

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  Procfile  QUICK_REFERENCE.md  README.md  SECURITY.md  git_log.txt  pip_list.txt  pyproject.toml  railway.json  replace.py  replace_commands.py  requirements.txt  setup.py  test_langchain.txt  test_out.txt  test_upload.py
.github/workflows/: pypi-publish.yml  python-package.yml
backend/: main.py
backend/frontend/: index.html
backend/frontend/static/: app.js  style.css
docs/: INSTALL.md  QUICK_REFERENCE.md
extras/migration_scripts/: replace.py  replace_commands.py
guardrag/: __init__.py
guardrag/api/: main.py
guardrag/api/frontend/: index.html
guardrag/api/frontend/static/: app.js  style.css
guardrag/cli/: main.py
guardrag/rag/: core.py
guardrag/utils/: ollama.py  safety.py
guragchat/: __init__.py
guragchat/cli/: main.py
guragchat/rag/: core.py
guragchat/utils/: ollama.py  safety.py
scratch/: test_api_upload.py  test_pdf_upload.py
tests/: test_api_share.py  test_redactor.py  test_workflow.py
