[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guard-rag"
version = "1.1.1"
description = "Privacy-first local RAG chatbot with safety guardrails"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "sowmiyan-s", email = "your-email@example.com" }
]
keywords = ["rag", "ollama", "guardrails", "security", "local-llm"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langchain-ollama>=0.2.0,<0.3.0",
    "langchain-huggingface>=0.1.0,<0.2.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.2.0",
    "docx2txt>=0.8",
    "python-dotenv>=1.0.1",
    "nest_asyncio>=1.6.0",
    "pydantic>=2.7.0"
]

[project.scripts]
guard-rag-web = "backend.main:start_server"
guard-rag-cli = "chatbot:main"

[tool.setuptools]
py-modules = ["chatbot"]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["frontend/**/*", "frontend/*"]
